fix git fetch dialog render scrollbar in text area

--- a/styles/dialogs-all.less
+++ b/styles/dialogs-all.less
@@ -1,7 +1,7 @@
 #git-progress-dialog {
     textarea {
         height: 300px;
-        width: 100%;
+        width: calc(100% - 2px);
         margin: unset;
         padding: unset;
         &[readonly="readonly"] {
